--- a/.gitignore
+++ b/.gitignore
@@ -54,3 +54,5 @@ dkms.conf
 /ue_08_funktionen/build/
 /ue_09_spannungsteiler/build/
 /ue_09_spannungsteiler/dist/
+/2ahme/ue_10_funktionen/build/
+/2ahme/ue_10_funktionen/dist/
