--- a/.gitignore
+++ b/.gitignore
@@ -56,3 +56,5 @@ dkms.conf
 /ue_09_spannungsteiler/dist/
 /2ahme/ue_10_funktionen/build/
 /2ahme/ue_10_funktionen/dist/
+/2ahme/ue_09_spannungsteiler/build/
+/2ahme/ue_09_spannungsteiler/dist/
