--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,5 @@ dkms.conf
 /2ahme/ue_10_funktionen/dist/
 /2ahme/ue_09_spannungsteiler/build/
 /2ahme/ue_09_spannungsteiler/dist/
+/2ahme/ue_12_stern_dreieck_transformation/build/
+/2ahme/ue_12_stern_dreieck_transformation/dist/
