--- a/.gitignore
+++ b/.gitignore
@@ -60,3 +60,5 @@ dkms.conf
 /2ahme/ue_09_spannungsteiler/dist/
 /2ahme/ue_12_stern_dreieck_transformation/build/
 /2ahme/ue_12_stern_dreieck_transformation/dist/
+/2ahme/ue_14_felder/build/
+/2ahme/ue_14_felder/dist/
