--- a/.gitignore
+++ b/.gitignore
@@ -62,3 +62,5 @@ dkms.conf
 /2ahme/ue_12_stern_dreieck_transformation/dist/
 /2ahme/ue_14_felder/build/
 /2ahme/ue_14_felder/dist/
+/2ahme/ue_15_kleines-1x1/dist/
+/2ahme/ue_15_kleines-1x1/build/
