--- a/.gitignore
+++ b/.gitignore
@@ -64,3 +64,5 @@ dkms.conf
 /2ahme/ue_14_felder/dist/
 /2ahme/ue_15_kleines-1x1/dist/
 /2ahme/ue_15_kleines-1x1/build/
+/2ahme/ue_13_zufallszahlen/dist/
+/2ahme/ue_13_zufallszahlen/build/
