--- a/.gitignore
+++ b/.gitignore
@@ -66,3 +66,5 @@ dkms.conf
 /2ahme/ue_15_kleines-1x1/build/
 /2ahme/ue_13_zufallszahlen/dist/
 /2ahme/ue_13_zufallszahlen/build/
+/3ahme/ue16_rechnenMitBruechen/dist/
+/3ahme/ue16_rechnenMitBruechen/build/
