--- a/.gitignore
+++ b/.gitignore
@@ -68,3 +68,9 @@ dkms.conf
 /2ahme/ue_13_zufallszahlen/build/
 /3ahme/ue16_rechnenMitBruechen/dist/
 /3ahme/ue16_rechnenMitBruechen/build/
+/3ahme/ue_17_felder/dist/
+/3ahme/ue_17_felder/build/
+/Labor/ue01/dist/
+/Labor/ue01/build/
+/3ahme/ue_18_statistik/build/
+/3ahme/ue_18_statistik/dist/
