--- a/.gitignore
+++ b/.gitignore
@@ -74,3 +74,5 @@ dkms.conf
 /Labor/ue01/build/
 /3ahme/ue_18_statistik/build/
 /3ahme/ue_18_statistik/dist/
+/3ahme/ue_19_herzfrequenzmessung/build/
+/3ahme/ue_19_herzfrequenzmessung/dist/
