--- a/.gitignore
+++ b/.gitignore
@@ -76,3 +76,5 @@ dkms.conf
 /3ahme/ue_18_statistik/dist/
 /3ahme/ue_19_herzfrequenzmessung/build/
 /3ahme/ue_19_herzfrequenzmessung/dist/
+/3ahme/ue_20_umkehrenvonfeldern/build/
+/3ahme/ue_20_umkehrenvonfeldern/dist/
