--- a/.gitignore
+++ b/.gitignore
@@ -78,3 +78,5 @@ dkms.conf
 /3ahme/ue_19_herzfrequenzmessung/dist/
 /3ahme/ue_20_umkehrenvonfeldern/build/
 /3ahme/ue_20_umkehrenvonfeldern/dist/
+/3ahme/ue_21_strings/dist/
+/3ahme/ue_21_strings/build/
