--- a/.gitignore
+++ b/.gitignore
@@ -86,3 +86,5 @@ dkms.conf
 /Labor/ue02/build/
 /Labor/ue_22_namelist/build/
 /Labor/ue_22_namelist/dist/
+/3ahme/ue_23_argcargv/dist/
+/3ahme/ue_23_argcargv/build/
