--- a/.gitignore
+++ b/.gitignore
@@ -88,3 +88,5 @@ dkms.conf
 /Labor/ue_22_namelist/dist/
 /3ahme/ue_23_argcargv/dist/
 /3ahme/ue_23_argcargv/build/
+/3ahme/ue_25_ersetzen&löschenvonStrings/build/
+/3ahme/ue_25_ersetzen&löschenvonStrings/dist/
