--- a/.gitignore
+++ b/.gitignore
@@ -90,3 +90,5 @@ dkms.conf
 /3ahme/ue_23_argcargv/build/
 /3ahme/ue_25_ersetzen&löschenvonStrings/build/
 /3ahme/ue_25_ersetzen&löschenvonStrings/dist/
+/3ahme/ue_26_struckturen/build/
+/3ahme/ue_26_struckturen/dist/
