--- a/.gitignore
+++ b/.gitignore
@@ -92,3 +92,4 @@ dkms.conf
 /3ahme/ue_25_ersetzen&löschenvonStrings/dist/
 /3ahme/ue_26_struckturen/build/
 /3ahme/ue_26_struckturen/dist/
+/3ahme/ue_26_strukturen/build/
