--- a/.gitignore
+++ b/.gitignore
@@ -93,3 +93,5 @@ dkms.conf
 /3ahme/ue_26_struckturen/build/
 /3ahme/ue_26_struckturen/dist/
 /3ahme/ue_26_strukturen/build/
+/3ahme/ue_27_radtour/build/
+/3ahme/ue_27_radtour/dist/
