--- a/.gitignore
+++ b/.gitignore
@@ -95,3 +95,5 @@ dkms.conf
 /3ahme/ue_26_strukturen/build/
 /3ahme/ue_27_radtour/build/
 /3ahme/ue_27_radtour/dist/
+/3ahme/ue_28_uebungplf/dist/
+/3ahme/ue_28_uebungplf/build/
